--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,4 @@
+/********** Base styles **********/
 *{
     margin: 0;
     padding: 0;
@@ -9,7 +10,7 @@
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../images/home.jpg);
-    /* background-image: url(../images/home.jpg); */
+    /* background-image: url(home.jpg); */
     background-size: cover;
     background-position: center;
 }
@@ -31,14 +32,14 @@
 .content{
     width: 100%;
     position: absolute;
-    top: 50%;
+    top: 45%;
     transform: translateY(-50%);
     text-align: center;
     color: white;
 }
 
 .content h1{
-    font-size: 70px;
+    font-size: 80px;
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -47,10 +48,9 @@ a{
     height: 60px;
     width: 200px;
     background: linear-gradient(#E07B29, #AF4C23);
+    margin: 30px;
     /* position: absolute; */
-    position: relative;
-    left: 360px;
-    margin: auto;
+    /* position: relative; */
     place-items: center;
     font-family: 'Ubuntu', sans-serif;
     text-decoration: none;
@@ -60,8 +60,20 @@ a{
 }
 
 li {
-    float: left; 
+    /*float:left;*/
+    display: inline-block;
     text-decoration: none; 
-    padding: 5px; 
-    list-style-type: none
+    list-style-type: none;
 }
+
+ul{
+    text-align: center;
+}
+
+@media only screen and (max-width: 698px){
+    .content h1{
+        font-size: 60px;
+        font-family: 'Ubuntu', sans-serif;
+    }
+}
+
