--- a/css/home.css
+++ b/css/home.css
@@ -16,12 +16,12 @@
 }
 
 .navbar{
-    width: 85%;
-    margin: auto;
-    padding: 35px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 85%;
+  margin: 0 20px;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo{
@@ -70,10 +70,22 @@ ul{
     text-align: center;
 }
 
-@media only screen and (max-width: 698px){
+@media only screen and (max-width: 788px){
     .content h1{
         font-size: 60px;
         font-family: 'Ubuntu', sans-serif;
+    }
+}
+
+@media only screen and (max-width: 524px){
+    .content h1{
+        font-size: 45px;
+        font-family: 'Ubuntu', sans-serif;
+    }
+
+    .logo{
+        width: 90px;
+        cursor: pointer;
     }
 }
 
