--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@
   .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../images/home.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/images/home.jpg);
     /* background-image: url(home.jpg); */
     background-size: cover;
     background-position: center;
