--- a/css/addemployee.css
+++ b/css/addemployee.css
@@ -196,7 +196,7 @@ body{
         justify-content: center;
       }
     
-      li{
+      .errors li{
         text-decoration: none; 
         list-style-type: none;
       }
