--- a/css/monitorroom.css
+++ b/css/monitorroom.css
@@ -27,7 +27,7 @@ body{
       top: 0;
       height: 70px;
       background-color: rgba(41, 39, 39, 0.3);
-      padding: 0 5%;
+      padding: 0 2%;
   }
   
   nav .links{
@@ -60,3 +60,21 @@ body{
     margin-left: 20px;
     font-family: 'Ubuntu', sans-serif;
 }
+
+@media only screen and (max-width: 500px){
+    nav .links{
+        font-size: 15px;
+    }
+    }
+
+    @media only screen and (max-width: 400px){
+    nav .links{
+        font-size: 13px;
+    }
+    }
+
+    @media only screen and (max-width: 320px){
+    nav .links{
+        font-size: 10px;
+    }
+    }
