--- a/css/rate.css
+++ b/css/rate.css
@@ -32,7 +32,7 @@ body{
       top: 0;
       height: 70px;
       background-color: rgba(41, 39, 39, 0.3);
-      padding: 0 5%;
+      padding: 0 2%;
   }
   
   nav .links{
@@ -180,3 +180,21 @@ body{
           margin-left: auto;
           margin-right: auto;
       }
+
+      @media only screen and (max-width: 500px){
+        nav .links{
+            font-size: 15px;
+        }
+        }
+    
+        @media only screen and (max-width: 400px){
+        nav .links{
+            font-size: 13px;
+        }
+        }
+    
+        @media only screen and (max-width: 320px){
+        nav .links{
+            font-size: 10px;
+        }
+        }
