--- a/css/showRequest.css
+++ b/css/showRequest.css
@@ -41,7 +41,7 @@ nav {
     top: 0;
     height: 70px;
     background-color: rgba(41, 39, 39, 0.3);
-    padding: 0 5%;
+    padding: 0 2%;
 }
 
 nav .links{
@@ -213,3 +213,21 @@ option {
     text-decoration: none; 
     list-style-type: none;
   }
+
+  @media only screen and (max-width: 500px){
+    nav .links{
+        font-size: 15px;
+    }
+    }
+
+    @media only screen and (max-width: 400px){
+    nav .links{
+        font-size: 13px;
+    }
+    }
+
+    @media only screen and (max-width: 320px){
+    nav .links{
+        font-size: 10px;
+    }
+    }
