--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -65,10 +65,17 @@ nav .links a {
     border-radius: 10px;
 }
 
+.alertBox{
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 100px;
+}
+
 .title {
     margin-left: 5%;
     position: relative;
-    margin-top: 90px;
+    /*margin-top: 80px;*/
 }
 
 .title h1{
@@ -163,7 +170,7 @@ nav .links a {
     }
 }
 
-@media only screen and (max-width: 563px){
+@media only screen and (max-width: 568px){
     .title h1{
         font-size: 30px;
     }
@@ -172,6 +179,13 @@ nav .links a {
         height: 45px;
         width: 200px;
         font-size: 16px;
+    }
+
+    .alertBox{
+        text-align: center;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-top: 100px;
     }
 }
 
@@ -197,6 +211,13 @@ nav .links a {
         border-radius: 10px;
         font-size: 14px;
     }
+
+    .alertBox{
+        text-align: center;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 100px;
+    }
 }
 
 @media only screen and (max-width: 393px){
@@ -209,6 +230,13 @@ nav .links a {
         width: 150px;
         border-radius: 10px;
         font-size: 12px;
+    }
+
+    .alertBox{
+        text-align: center;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 100px;
     }
 }
 
