--- a/css/home.css
+++ b/css/home.css
@@ -29,6 +29,13 @@
     cursor: pointer;
 }
 
+.alertBox{
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 100px;
+}
+
 .content{
     width: 100%;
     position: absolute;
