--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -83,7 +83,7 @@ nav .links a {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     text-shadow: 2px 2px black;
 }
 
