--- a/css/home.css
+++ b/css/home.css
@@ -77,6 +77,11 @@ ul{
     text-align: center;
 }
 
+.about p {
+    font-family: 'Carter One', cursive;
+    font-size: 40px;
+}
+
 @media only screen and (max-width: 788px){
     .content h1{
         font-size: 60px;
